--- a/gb/25/12/7/n14650208.md
+++ b/gb/25/12/7/n14650208.md
@@ -27,7 +27,7 @@
 <p>同时，一些航空公司也表示，在没有对受影响的机身部件做出新的保证之前，它们不愿接收飞机。</p>
 <p>路透社报导，“空客与部分供应商在提高产量以满足强劲的航空旅行需求方面存在分歧??西班牙供应商的面板问题等品质缺陷凸显了部分供应商面临的困境。”</p>
 <p>空客曾表示，该工业缺陷并非安全问题。该公司先前还曾表示，在新冠疫情导致供应链混乱后，目前供应链整体正在改善。</p>
-<p>路透社报导，“尤其值得一提的是，机身故障凸显了航空业最薄弱环节之一的担忧：航空结构公司（aerostructures firms）生产的零件永远不会被更换，这使得它们无法获得其它公司利润丰厚的备件销售。”</p>
+<p>路透社报导，“尤其值得一提的是，机身故障凸显了航空业最薄弱环节之一的担忧：航空结构公司（Aerostructures Firms）生产的零件永远不会被更换，这使得它们无法获得其它公司利润丰厚的备件销售。”</p>
 <p>内部人士还表示，空客持续一周的危机始于上周四，当时正值空客和法国航空公司（Air France）就2009年A330坠毁事件提起过失杀人罪上诉审判之际，气氛十分紧张——双方都强烈否认这些指控。</p>
 <p>2009年最重大、最知名的A330空难是法国航空447号班机（AF447）空难，发生于2009年6月1日，一架空中巴士A330-200客机在从里约热内卢飞往巴黎途中，于大西洋上空失联坠毁，机上228人全部罹难，原因是皮托管（pitot）结冰导致空速数据错误，机组人员应对失当引发失速，最终坠海。</p>
 <p><em>（本文参考了路透社的报导）</em></p>
@@ -38,7 +38,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/7/n10035147.md#1" target="_blank">林辉：雍和宫躲过文革有因 毁佛像者下场惨</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/30/n10679081.md#1" target="_blank">《求救信》获墨西哥电影节纪录片评委大奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9759413.md#1" target="_blank">陆雯：1964年的一桩惨案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
